tests/atest/rules/errors/invalid_section_in_resource/test.resource
*** Test Cases ***
Test case
    Step

*** task ***